# vega-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
apps/pacs_toolkit/: apps.py  forms.py  services.py  views.py
apps/pacs_toolkit/templates/pacs_toolkit/: audit_series.html
common/: api_tools.py  cli.py  commands.py  pandas_tools.py  text_tools.py
common/utils/: enums.py
config/: asgi.py  urls.py  wsgi.py
config/django/: files_and_storage.py
config/settings/: settings.py
integrations/philter/: .gitignore  README.md
pacs_toolkit/: apps.py  services.py  urls.py  views.py
philter/: .gitignore  .gitmodules  README.md  Repackage.py  Splitter.py  main.py  requirements.txt  splitter.py
spark-nlp/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  requirements.txt
spark-nlp/notebooks/: healthcare_demo.ipynb  healthcare_ocr_demo.ipynb
src/: main.py
src/vega_tools/: api_tools.py  cli.py  commands.py  pandas_tools.py  parser.py  paths.py  settings.py  text_parser.py  text_tools.py
src/vega_tools/commands/: philter.py  reports.py  spark_nlp.py  studies.py
src/vega_tools/common/: api_tools.py  pandas_tools.py  text_tools.py
src/vega_tools/common/utils/: enums.py  regex_utils.py  rest_utils.py
src/vega_tools/config/: settings.py
src/vega_tools/core/: api_tools.py  pandas_tools.py  text_tools.py
src/vega_tools/core/utils/: config_loader.py  enums.py  files_and_storage.py  regex_utils.py  rest_utils.py
src/vega_tools/utils/: config_loader.py  dataframe_utils.py  enums.py  file_utils.py  files_and_storage.py  regex_patterns.py  regex_utils.py  rest.py  rest_utils.py  text_utils.py
src/vt_console/: api_tools.py  cli.py  commands.py  pandas_tools.py  text_tools.py
src/vt_console/common/: api_tools.py  pandas_tools.py  text_tools.py
src/vt_console/common/utils/: config_loader.py  enums.py  regex_utils.py
src/vt_console/utils/: enums.py
static/css/: style.css
templates/: base.html
tests/: test_cli.py  test_paths.py
tests/commands/: test_philter.py  test_reports.py  test_spark_nlp.py  test_studies.py
tests/core/: test_api_tools.py  test_pandas_tools.py  test_text_tools.py
tests/core/utils/: test_config_loader.py  test_enums.py  test_files_and_storage.py  test_regex_utils.py  test_rest_utils.py
tests/fixtures/: fake_philter_main.py  fake_philter_main_failing.py
vega_tools/: settings.py  wsgi.py
