[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vega-tools"
description = "Python-based solution designed to provide tools for extracting, transforming, and loading data."
authors = [{ name = "Craig Hurley", email = "craig@vegainformatics.com" }]
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "numpy>=1.24.3,<2.0.0",
    "click>=7.1.2",
    "requests>=2.23.3",
    "charset-normalizer>=3.0.1",
    "rich>=14.0.0",
    "pyahocorasick>=2.1.0",
    "openpyxl>=3.1.5",
    "nltk>=3.9.1",
]

[project.urls]
Repository = "https://github.com/churley-vega/vega-tools"

[project.scripts]
vega-tools = "vega_tools.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vega_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
